;A setuptools based setup module. See:
;https://packaging.python.org/guides/distributing-packages-using-setuptools/
;https://github.com/pypa/sampleproject

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt